# FilePriv

./: .gitignore  Backlog.md  README.md  docker-compose.yml  package-lock.json  package.json
docs/: LICENSE  README.md
prisma/: schema.prisma
public/css/: about.css  homepage.css  index.css  login.css  pullFile.css  servers.css  signup.css
public/html/: homepage.html  index.html  pullFile.html  servers.html  support.html
public/js/: homepage.js  pullFile.js  pushFile.js  servers.js  signup.js
settings/: settings.txt
source/frontend/html/: about.html  index.html  pullFile.html  pushFile.html  support.html
source/frontend/js/: homepage.js  pullFile.js  pushFile.js  signup.js
source/rust-core/: README.md  docker-compose.yml
source/rust-core/src/: database.sql
src/backend/: README.md  app.js  database.sql  databasesql.sh  db.json
src/backend/config/: db.js
src/backend/controllers/: authController.js  fileController.js  serverController.js
src/backend/models/: FileMetadata.js  ServerNode.js  (+3 more)
src/backend/services/: .env.example  Cargo.toml  encryptionService.js  shardingService.js  storageService.js  storage_key.pub
src/backend/services/src/: config.rs  main.rs  watcher.rs
src/backend/services/src/files/: encryption.rs  io.rs  mod.rs  sharding.rs
src/backend/services/src/machines/: mod.rs  nodestorage.rs  shardingmanager.rs  ssh_client.rs
src/frontend/: about.html  homepage.html  index.html  login.html  pullFile.html  pushFile.html  servers.html  signup.html  support.html
src/node/: .env.example  app.js  databasesql.sh
src/rust/: Cargo.toml
(+36 files in other folders)
