[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
notify = "6.1"       
futures = "0.3"
dotenv = "0.15"       
rand = "0.8"         
hex = "0.4"           
dirs = "5.0"
ssh2 = "0.9"
aes-gcm = "0.10"
sha2 = "0.10"
